--- a/src/App.css
+++ b/src/App.css
@@ -5,5 +5,32 @@
 }
 
 body{
-  height: 100vh;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: palevioletred;
+}
+
+.container{
+  min-height: 200px;
+  width: 400px;
+  background-color: white;
+  padding: 20px;
+  border-radius: 5px;
+}
+
+.title{
+  font-size: 1.8em;
+}
+
+#clear{
+  width: 100%;
+  height: 50px;
+  font-size: 1.5em;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  background-color: palevioletred;
+  color: white;
 }
