--- a/src/App.css
+++ b/src/App.css
@@ -13,8 +13,8 @@ body{
 }
 
 .container{
-  min-height: 200px;
-  width: 400px;
+  min-height: 150px;
+  min-width: 400px;
   background-color: white;
   padding: 20px;
   border-radius: 5px;
@@ -25,6 +25,7 @@ body{
 }
 
 #clear{
+  margin-top: 30px;
   width: 100%;
   height: 50px;
   font-size: 1.5em;
